manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: terraform
  labels:
    app.kubernetes.io/name: terraform
