manifests/base/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: iac-platform
  namespace: terraform
  labels:
    app.kubernetes.io/name: iac-platform
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: iac-platform
    app.kubernetes.io/component: backend
  ports:
    - name: https
      port: 8080
      targetPort: https
      protocol: TCP
    - name: ws-agent
      port: 8090
      targetPort: ws-agent
      protocol: TCP
