manifests/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: iac-frontend
  namespace: terraform
  labels:
    app.kubernetes.io/name: iac-platform
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: iac-platform
    app.kubernetes.io/component: frontend
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
